fix: improve readability for TFT logo

--- a/src/components/splash/splash.scss
+++ b/src/components/splash/splash.scss
@@ -64,7 +64,15 @@
 
     .tft-logo {
         @include image-contain();
-        background-image: url('./tft.png');
+        background-image: url('./tft.png'), linear-gradient(
+            to bottom,
+            rgba(255,255,255,0.0),
+            rgba(255,255,255,0.6),
+            rgba(255,255,255,0.8),
+            rgba(255,255,255,0.8),
+            rgba(255,255,255,0.6),
+            rgba(255,255,255,0.0),
+        );
         width: 100%;
         min-height: 4em;
     }
